# track-skill

./: .gitignore  README.md  pyproject.toml
codex-skill/track/: SKILL.md
codex-skill/track/agents/: openai.yaml
examples/: sample_candidates.json  sample_project.json
pmg/: __init__.py  backfill.py  capture.py  cli.py  config.py  context_pack.py  cost_guard.py  db.py  importers.py  models.py  relations.py  render.py  repository.py  search.py  utils.py
tests/: test_pmg.py
track/: __init__.py  cli.py
